--- a/composer.json
+++ b/composer.json
@@ -24,25 +24,29 @@
         "ext-dom": "*",
         "ext-json": "*",
         "ext-xml": "*",
-        "phpdocumentor/reflection-docblock" : "^5.6.2",
-        "phpstan/phpdoc-parser" : "^2.2.0",
-        "symfony/http-client" : "^6.4 || ^7.0",
-        "symfony/property-access" : "^6.4 || ^7.0",
-        "symfony/property-info" : "^6.4 || ^7.0",
-        "symfony/serializer" : "^6.4 || ^7.0",
-        "damienharper/adf-tools": "dev-main#22c3297ed4b856f4b2603b18d3189cbce145bcbc"
+        "damienharper/adf-tools": "dev-main#22c3297ed4b856f4b2603b18d3189cbce145bcbc",
+        "phpdocumentor/reflection-docblock": "^5.6.2",
+        "phpstan/phpdoc-parser": "^2.2.0",
+        "symfony/http-client": "^6.4 || ^7.0",
+        "symfony/property-access": "^6.4 || ^7.0",
+        "symfony/property-info": "^6.4 || ^7.0",
+        "symfony/serializer": "^6.4 || ^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0",
-        "symfony/var-dumper": "^6.4",
         "friendsofphp/php-cs-fixer": "^3.85",
         "phpstan/phpstan": "^2.1",
-        "phpstan/phpstan-phpunit": "^2.0"
+        "phpstan/phpstan-phpunit": "^2.0",
+        "phpunit/phpunit": "^10.0",
+        "symfony/framework-bundle": "^6.4 || ^7.0",
+        "symfony/var-dumper": "^6.4"
     },
     "repositories": [
         {
             "type": "vcs",
             "url": "https://github.com/Xen3r0/adf-tools"
         }
-    ]
+    ],
+    "config": {
+        "sort-packages": true
+    }
 }
