--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,13 @@
         "ext-dom": "*",
         "ext-json": "*",
         "ext-xml": "*",
-        "damienharper/adf-tools": "dev-main#22c3297ed4b856f4b2603b18d3189cbce145bcbc",
         "phpdocumentor/reflection-docblock": "^5.6.2",
         "phpstan/phpdoc-parser": "^2.2.0",
         "symfony/http-client": "^6.4 || ^7.0",
         "symfony/property-access": "^6.4 || ^7.0",
         "symfony/property-info": "^6.4 || ^7.0",
-        "symfony/serializer": "^6.4 || ^7.0"
+        "symfony/serializer": "^6.4 || ^7.0",
+        "xen3r0/adf-tools": "^1.1.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.85",
